--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -35,7 +36,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:23.4.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
@@ -43,10 +43,33 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.google.firebase:firebase-auth:9.0.2'
-    compile 'com.google.android.gms:play-services-auth:9.0.2'
     compile 'com.facebook.android:facebook-android-sdk:4.14.0'
-    compile 'com.google.firebase:firebase-database:9.0.2'
+    compile 'com.google.firebase:firebase-database:9.2.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+
+
+    //IMAGE LOAD
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    //CHAT UI
+    compile 'hani.momanii.supernova_emoji_library:supernova-emoji-library:0.0.2'
+    compile 'me.himanshusoni.chatmessageview:chat-message-view:1.0.3'
+
+    // AUTH
+    compile 'com.google.android.gms:play-services-auth:9.2.0'
+    compile 'com.google.firebase:firebase-auth:9.2.0'
+
+    //DATABASE FIREBASE,UI
+    compile 'com.google.firebase:firebase-database:9.2.0'
+    compile 'com.firebaseui:firebase-ui-database:0.4.1'
+
+    //STORAGE FIREBASE
+    compile 'com.google.firebase:firebase-storage:9.2.0'
+
+    //Places SERVICES
+    compile 'com.google.android.gms:play-services-places:9.2.0'
+    compile 'com.google.android.gms:play-services-maps:9.2.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
 
