--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        mavenCentral()
+        maven { url "https://dl.bintray.com/hani-momanii/maven"}
     }
 }
 
