--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.facebook.android:facebook-android-sdk:4.14.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.google.firebase:firebase-database:9.2.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
 
@@ -62,6 +63,7 @@ dependencies {
     //DATABASE FIREBASE,UI
     compile 'com.google.firebase:firebase-database:9.2.0'
     compile 'com.firebaseui:firebase-ui-database:0.4.1'
+    compile 'com.google.firebase:firebase-messaging:9.2.0'
 
     //STORAGE FIREBASE
     compile 'com.google.firebase:firebase-storage:9.2.0'
@@ -69,6 +71,7 @@ dependencies {
     //Places SERVICES
     compile 'com.google.android.gms:play-services-places:9.2.0'
     compile 'com.google.android.gms:play-services-maps:9.2.0'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
