--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
@@ -47,6 +48,10 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.google.firebase:firebase-database:9.2.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+
+    compile 'com.google.code.gson:gson:2.6.1'
+    compile 'com.google.android.gms:play-services-appinvite:9.2.0'
     compile files('libs/StartAppInAppPlus-2.3.jar')
 
 
@@ -72,6 +77,10 @@ dependencies {
     //Places SERVICES
     compile 'com.google.android.gms:play-services-places:9.2.0'
     compile 'com.google.android.gms:play-services-maps:9.2.0'
+    compile 'com.google.maps.android:android-maps-utils:0.3+'
+    compile 'com.google.android.gms:play-services-location:9.2.0'
+    compile 'com.github.paolorotolo:appintro:4.1.0'
+
 
 
 }
